tests/baselines/reference/objectTypesIdentityWithCallSignaturesDifferingParamCounts.errors.txt
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(26,1): error TS2463: Duplicate overload signature for foo1.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(27,1): error TS2463: Duplicate overload signature for foo1.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(30,1): error TS2463: Duplicate overload signature for foo1b.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(31,1): error TS2463: Duplicate overload signature for foo1b.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(34,1): error TS2463: Duplicate overload signature for foo1c.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(35,1): error TS2463: Duplicate overload signature for foo1c.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(38,1): error TS2463: Duplicate overload signature for foo2.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(39,1): error TS2463: Duplicate overload signature for foo2.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(42,1): error TS2463: Duplicate overload signature for foo3.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(43,1): error TS2463: Duplicate overload signature for foo3.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(46,1): error TS2463: Duplicate overload signature for foo4.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(47,1): error TS2463: Duplicate overload signature for foo4.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(58,1): error TS2463: Duplicate overload signature for foo6.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(59,1): error TS2463: Duplicate overload signature for foo6.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(70,1): error TS2463: Duplicate overload signature for foo9.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(71,1): error TS2463: Duplicate overload signature for foo9.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(74,1): error TS2463: Duplicate overload signature for foo10.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(75,1): error TS2463: Duplicate overload signature for foo10.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(94,1): error TS2463: Duplicate overload signature for foo14.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(95,1): error TS2463: Duplicate overload signature for foo14.


==== tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts (20 errors) ====
    // object types are identical structurally
    
    class A {
        foo(x: string): string { return null; }
    }
    
    class B {
        foo(x: string, y: string): string { return null; }
    }
    
    class C<T> {
        foo(x: T, y: T): T { return null; }
    }
    
    interface I {
        foo(x: string): string;
    }
    
    interface I2<T> {
        foo(x: T): T;
    }
    
    var a: { foo(x: string, y: string): string }
    var b = { foo(x: string) { return ''; } };
    
    function foo1(x: A);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1.
    function foo1(x: A); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1.
    function foo1(x: any) { }
    
    function foo1b(x: B);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1b.
    function foo1b(x: B); // error
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1b.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1c.
    function foo1c(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1c.
    function foo1c(x: any) { }
    
    function foo2(x: I);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo2.
    function foo2(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo2.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo3.
    function foo3(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo3.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo4.
    function foo4(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo4.
    function foo4(x: any) { }
    
    function foo5(x: A);
    function foo5(x: B); // ok
    function foo5(x: any) { }
    
    function foo5b(x: A);
    function foo5b(x: C<string>); // ok
    function foo5b(x: any) { }
    
    function foo6(x: A);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo6.
    function foo6(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo6.
    function foo6(x: any) { }
    
    function foo7(x: A);
    function foo7(x: typeof a); // ok
    function foo7(x: any) { }
    
    function foo8(x: B);
    function foo8(x: I); // ok
    function foo8(x: any) { }
    
    function foo9(x: B);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo9.
    function foo9(x: C<string>); // ok
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo9.
    function foo9(x: any) { }
    
    function foo10(x: B);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo10.
    function foo10(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo10.
    function foo10(x: any) { }
    
    function foo11(x: B);
    function foo11(x: typeof b); // ok
    function foo11(x: any) { }
    
    function foo12(x: I);
    function foo12(x: C<string>); // ok
    function foo12(x: any) { }
    
    function foo12b(x: I2<string>);
    function foo12b(x: C<string>); // ok
    function foo12b(x: any) { }
    
    function foo13(x: I);
    function foo13(x: typeof a); // ok
    function foo13(x: any) { }
    
    function foo14(x: I);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo14.
    function foo14(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo14.
    function foo14(x: any) { }
    
    function foo15(x: I2<string>);
    function foo15(x: C<number>); // ok
    function foo15(x: any) { }